--- a/modules/ROOT/pages/advanced_usage/configuration_file.adoc
+++ b/modules/ROOT/pages/advanced_usage/configuration_file.adoc
@@ -4,7 +4,7 @@
 
 == Introduction
 
-The ownCloud Client uses a configuration file. It has several sections for particular settings. You will find more sections in the configuration file than described here. Do not change any of those settings except support advises you to do so. 
+The ownCloud Desktop App uses a configuration file. It has several sections for particular settings. You will find more sections in the configuration file than described here. Do not change any of those settings except support advises you to do so. 
 
 == Location of the Configuration File
  
@@ -25,7 +25,7 @@ The location of the configuration file depends on the operating system used. You
 
 The configuration file contains settings using the {ini-file-format-url}[Microsoft Windows .ini file format]. You can overwrite changes using the ownCloud configuration dialog.
 
-WARNING: Use caution when making changes to the ownCloud Client configuration file. Incorrect settings can produce unintended results.
+WARNING: Use caution when making changes to the ownCloud Desktop App configuration file. Incorrect settings can produce unintended results.
 
 == Section `[ownCloud]`
 
@@ -59,7 +59,7 @@ WARNING: Use caution when making changes to the ownCloud Client configuration fi
 | `10000000` +
 (or 10 MB)
 | Specifies the initial chunk size of uploaded files in bytes.
-The client will dynamically adjust this size within the maximum and minimum bounds (see below).
+The Desktop App will dynamically adjust this size within the maximum and minimum bounds (see below).
 
 | `maxChunkSize`
 | `100000000` +
@@ -75,7 +75,7 @@ The client will dynamically adjust this size within the maximum and minimum boun
 | `60000` +
 (1 minute)
 | Target duration in milliseconds for chunk uploads.
-The client adjusts the chunk size until each chunk upload takes approximately this long.
+The Desktop App adjusts the chunk size until each chunk upload takes approximately this long.
 Set to 0 to disable dynamic chunk sizing.
 
 | `promptDeleteAllFiles` 
