--- a/modules/ROOT/pages/appendices/troubleshooting.adoc
+++ b/modules/ROOT/pages/appendices/troubleshooting.adoc
@@ -8,7 +8,7 @@
 The following two general issues can result in failed synchronization:
 
 * The server setup is incorrect.
-* The client contains a bug.
+* The Desktop App contains a bug.
 
 When reporting bugs, it is helpful if you first determine what part of the system is causing the issue.
 
@@ -18,14 +18,14 @@ Performing a general ownCloud Server test::
   The first step in troubleshooting synchronization issues is to verify that you can log on to the ownCloud web application. To verify connectivity to the ownCloud server try logging in via your Web browser. If you are not prompted for your username and password, or if a red warning box appears on the page, your server setup requires modification. Please verify that your server installation is working correctly.
 
 Ensure the WebDAV API is working::
-  If all desktop clients fail to connect to the ownCloud Server, but access using the Web interface functions properly, the problem is often a misconfiguration of the WebDAV API. The ownCloud Client uses the built-in WebDAV access of the server content. Verify that you can log on to ownCloud's WebDAV server. To verify connectivity with the ownCloud WebDAV server, open a browser window and enter the address to the ownCloud WebDAV server. For example, if your ownCloud instance is installed at `\https://yourserver.com/owncloud`, your WebDAV server address is `\https://yourserver.com/owncloud/remote.php/webdav`. If you are prompted for your username and password but, after providing the correct credentials, authentication fails, please ensure that your authentication backend is configured properly.
+  If all Desktop Apps fail to connect to the ownCloud Server, but access using the Web interface functions properly, the problem is often a misconfiguration of the WebDAV API. The ownCloud Desktop App uses the built-in WebDAV access of the server content. Verify that you can log on to ownCloud's WebDAV server. To verify connectivity with the ownCloud WebDAV server, open a browser window and enter the address to the ownCloud WebDAV server. For example, if your ownCloud instance is installed at `\https://yourserver.com/owncloud`, your WebDAV server address is `\https://yourserver.com/owncloud/remote.php/webdav`. If you are prompted for your username and password but, after providing the correct credentials, authentication fails, please ensure that your authentication backend is configured properly.
 
 Use a WebDAV command line tool to test::
   A more sophisticated test method for troubleshooting synchronization issues is to use a WebDAV command line client and log into the ownCloud WebDAV server. One such command line client -- called `cadaver` -- is available for Linux distributions. You can use this application to further verify that the WebDAV server is running properly using PROPFIND calls. As an example, after installing the `cadaver` app, you can issue the `propget` command to obtain various properties pertaining to the current directory and also verify WebDAV server connection.
 
 == CSync Unknown Error
 
-If you see this error message stop your client, delete the `._sync_xxxxxxx.db` file, and then restart your client. There is a hidden `._sync_xxxxxxx.db` file inside the folder of every account configured on your client.
+If you see this error message stop your Desktop App, delete the `._sync_xxxxxxx.db` file, and then restart your Desktop App. There is a hidden `._sync_xxxxxxx.db` file inside the folder of every account configured on your Desktop App.
 
 NOTE: Please note that this will also erase some of your settings about which files to download.
 
@@ -45,27 +45,27 @@ Other issues can affect synchronization of your ownCloud files:
 The data directory on the server is exclusive to ownCloud and must not be modified manually.
 
 * If you are using a different file backend on the server, you can try to exclude a bug in the backend by reverting to the built-in backend.
-* If you are experiencing slow upload/download speed or similar performance issues be aware that those could be caused by on-access virus scanning solutions, either on the server (like the {files-antivirus-app-url}[files_antivirus app]) or the client.
+* If you are experiencing slow upload/download speed or similar performance issues be aware that those could be caused by on-access virus scanning solutions, either on the server (like the {files-antivirus-app-url}[files_antivirus app]) or the Desktop App.
 ====
 
 == Log Files
 
 Effectively debugging software requires as much relevant information as can be obtained. To assist the ownCloud support personnel, please try to provide as many relevant logs as possible. Log output can help with tracking down problems and, if you report a bug, log output can help to resolve an issue more quickly.
 
-The client log file is often the most helpful log to provide.
+The Desktop App log file is often the most helpful log to provide.
 
-=== Obtaining the Client Log File
+=== Obtaining the Desktop App Log File
 
 There are several ways to produce log files. The most commonly useful is enabling logging to a temporary directory, described first.
 
 [NOTE]
 ====
-Client log files contain file and folder names, metadata, server URLs and other private information. Only upload them if you are comfortable sharing the information. Logs are often essential for tracking down a problem though, so please consider providing them to developers privately.
+Desktop App log files contain file and folder names, metadata, server URLs and other private information. Only upload them if you are comfortable sharing the information. Logs are often essential for tracking down a problem though, so please consider providing them to developers privately.
 ====
 
 ==== Logging to a Temporary Directory
 
-.  Open the ownCloud Desktop Client.
+.  Open the ownCloud Desktop App.
 .  Press btn:[F12] or btn:[Ctrl-L] or btn:[Cmd+L] on your keyboard.
 +
 The Log Output window opens.
@@ -76,18 +76,18 @@ image:appendices/troubleshooting/log_output_window.png[image,width=60%,pdfwidth=
 .  Later, to find the log files, click the btn:[Open folder] button.
 .  Select the logs for the time frame in which the issue occurred.
 
-NOTE: That the choice to enable logging will be persisted across client restarts.
+NOTE: That the choice to enable logging will be persisted across Desktop App restarts.
 
 ==== Saving Files Directly
 
-The ownCloud client allows you to save log files directly to a custom file or directory. This is a useful option for easily reproducible problems, as well as for cases where you want logs to be saved to a different location.
+The ownCloud Desktop App allows you to save log files directly to a custom file or directory. This is a useful option for easily reproducible problems, as well as for cases where you want logs to be saved to a different location.
 
 To save log files to a file or a directory:
 
-1. To save to a file, start the client using the `--logfile <file>` command, where `<file>` is the filename to which you want to save the file.
-2. To save to a directory, start the client using the `--logdir <dir>` command, where `<dir>` is an existing directory.
+1. To save to a file, start the Desktop App using the `--logfile <file>` command, where `<file>` is the filename to which you want to save the file.
+2. To save to a directory, start the Desktop App using the `--logdir <dir>` command, where `<dir>` is an existing directory.
 
-When using the `--logdir` command, each sync run creates a new file. To limit the amount of data that accumulates over time, you can specify the `--logexpire <hours>` command. When combined with the `--logdir` command, the client automatically erases saved log data in the directory that is older than the specified number of hours.
+When using the `--logdir` command, each sync run creates a new file. To limit the amount of data that accumulates over time, you can specify the `--logexpire <hours>` command. When combined with the `--logdir` command, the Desktop App automatically erases saved log data in the directory that is older than the specified number of hours.
 
 Adding the `--logdebug` flag increases the verbosity of the generated log files.
 
@@ -100,7 +100,7 @@ owncloud --logdir /tmp/owncloud_logs --logexpire 48
 
 ==== Logging in the Console
 
-If the ownCloud client isn't able to start and immediately crashes the first two options are not available. Therefore, it might be necessary to start the ownCloud client using the command line in order to see the error message
+If the ownCloud Desktop App isn't able to start and immediately crashes the first two options are not available. Therefore, it might be necessary to start the ownCloud Desktop App using the command line in order to see the error message
 
 On Linux and Mac simply open the terminal and run:
 
@@ -116,7 +116,7 @@ On Windows open a PowerShell and run the following command:
 & 'C:\Program Files\ownCloud\owncloud.exe' --logfile - --logflush | Write-Host
 ----
 
-Make sure to copy the whole command and adjust the path to your `owncloud.exe`, if you have chosen to install the client in a different path.
+Make sure to copy the whole command and adjust the path to your `owncloud.exe`, if you have chosen to install the Desktop App in a different path.
 
 To further increase the verbosity of the output you can also combine these commands with the `--logdebug` argument.
 
@@ -157,7 +157,7 @@ The ownCloud server also maintains an ownCloud specific log file. This log file 
 
 You can view the server log file using the web interface or you can open it directly from the file system in the ownCloud server data directory.
 
-Need more information on this. How is the log file accessed? Need to explore procedural steps in access and in saving this file, similar to how the log file is managed for the client. Perhaps it is detailed in the Admin Guide and a link should be provided from here. I will look into that when I begin heavily editing the Admin Guide.
+Need more information on this. How is the log file accessed? Need to explore procedural steps in access and in saving this file, similar to how the log file is managed for the Desktop App. Perhaps it is detailed in the Admin Guide and a link should be provided from here. I will look into that when I begin heavily editing the Admin Guide.
 
 === Webserver Log Files
 
@@ -170,7 +170,7 @@ You can find more information about Apache logging at `http://httpd.apache.org/d
 
 == Core Dumps
 
-On Mac OS X and Linux systems, and in the unlikely event the client software crashes, the client is able to write a core dump file. Obtaining a core dump file can assist ownCloud Customer Support tremendously in the debugging process.
+On Mac OS X and Linux systems, and in the unlikely event the Desktop App software crashes, the Desktop App is able to write a core dump file. Obtaining a core dump file can assist ownCloud Customer Support tremendously in the debugging process.
 
 To enable the writing of core dump files, you must define the `OWNCLOUD_CORE_DUMP` environment variable on the system.
 
@@ -178,7 +178,7 @@ For example:
 
 `OWNCLOUD_CORE_DUMP=1 owncloud`
 
-This command starts the client with core dumping enabled and saves the files in the current working directory.
+This command starts the Desktop App with core dumping enabled and saves the files in the current working directory.
 
 [NOTE]
 ====
