--- a/modules/ROOT/pages/faq.adoc
+++ b/modules/ROOT/pages/faq.adoc
@@ -5,7 +5,7 @@
 
 == Introduction
 
-Here you can find some of the most frequently asked questions about the ownCloud Desktop client.
+Here you can find some of the most frequently asked questions about the ownCloud Desktop App.
 
 == Usage
 
@@ -21,31 +21,31 @@ To solve this issue, you can:
 
 === Syncing Stops When Attempting to Sync Deeper Than 100 Sub-Directories
 
-The sync client has been intentionally limited to sync no deeper than 100 sub-directories. The hard limit exists to guard against bugs with cycles like symbolic link loops. When a deeply nested directory is excluded from synchronization it will be listed with other ignored files and directories in the "Not synced" tab of the "Activity" pane.
+The Desktop App has been intentionally limited to sync no deeper than 100 sub-directories. The hard limit exists to guard against bugs with cycles like symbolic link loops. When a deeply nested directory is excluded from synchronization it will be listed with other ignored files and directories in the "Not synced" tab of the "Activity" pane.
 
 === My Sync Folder Displays a Different Quota Than the Web Interface
 
-When other users share data with you, it's downloaded to the sync folder and counted as space used by the desktop client, although it doesn't affect your quota for storage usage. There are more factors taken into account when calculating the quota status. For more information, see the {user_manual_quota}[Storage Quotas in the User Manual].
+When other users share data with you, it's downloaded to the sync folder and counted as space used by the Desktop App, although it doesn't affect your quota for storage usage. There are more factors taken into account when calculating the quota status. For more information, see the {user_manual_quota}[Storage Quotas in the User Manual].
 
 == Major Configuration Changes
 
 === I Want to Move My Local Sync Folder
 
-The ownCloud desktop client does not provide a way to change the local sync folder directly. However, it can be done in two ways:
+The ownCloud Desktop App does not provide a way to change the local sync folder directly. However, it can be done in two ways:
 
 . Copy the folder and avoid a full re-sync:
 
-.. Stop the client and edit the `localPath=` line in the
+.. Stop the Desktop App and edit the `localPath=` line in the
 xref:advanced_usage/configuration_file.adoc#location-of-the-configuration-file[configuration file]
 according your needs.
 
-.. Copy (or move) all your data from the current to the new location manually and start the client.
+.. Copy (or move) all your data from the current to the new location manually and start the Desktop App.
 
 . Create a new sync connection with a new location: 
 
 ..  Remove the existing connection which syncs to the old directory.
 +
-To do so, in the client UI, which you can see below, click the drop-down menu menu:Account[Remove].
+To do so, in the Desktop App UI, which you can see below, click the drop-down menu menu:Account[Remove].
 +
 image:faq/ownCloud-remove_existing_connection.png[image, width=80%,pdfwidth=60%]
 +
@@ -61,9 +61,9 @@ This opens the ownCloud Connection Wizard, which you can see below, _but_ with a
 +
 [IMPORTANT]
 ====
-Be careful before choosing the "Start a clean sync" option. The old sync folder _may_ contain a considerable amount of data, ranging into the gigabytes or terabytes. If it does, after the client creates the new connection, it will have to download *all* of that information again.
+Be careful before choosing the "Start a clean sync" option. The old sync folder _may_ contain a considerable amount of data, ranging into the gigabytes or terabytes. If it does, after the Desktop App creates the new connection, it will have to download *all* of that information again.
 
-Instead, first move or copy the old local sync folder, containing a copy of the existing files, to the new location. Then, when creating the new connection choose "_keep existing data_" instead. The ownCloud client will check the files in the newly-added sync folder and find that they match what is on the server and not need to download anything.
+Instead, first move or copy the old local sync folder, containing a copy of the existing files, to the new location. Then, when creating the new connection choose "_keep existing data_" instead. The ownCloud Desktop App will check the files in the newly-added sync folder and find that they match what is on the server and not need to download anything.
 ====
 +
 image:faq/ownCloud-replacement_connection_wizard.png[image, width=80%,pdfwidth=60%]
@@ -72,15 +72,15 @@ Make your choice and click btn:[Connect...] This will then lead you through the 
 
 === I Want to Change My Server URL
 
-Since changing server URLs is a potentially dangerous operation the ownCloud desktop client does not provide a user interface for this change. Typically, server URL changes should be implemented by serving a permanent redirect to the new location on the old URL. The client will then permanently update the server URL the next time it queries the old url.
+Since changing server URLs is a potentially dangerous operation the ownCloud Desktop App does not provide a user interface for this change. Typically, server URL changes should be implemented by serving a permanent redirect to the new location on the old URL. The Desktop App will then permanently update the server URL the next time it queries the old url.
 
 For situations where arranging for a redirect is impossible, url changes can be done by editing the config file. Before doing so make sure that the new url does indeed point to the same server, with the same users and the same data. Then go through these steps:
 
-1. Shut down the ownCloud client.
+1. Shut down the ownCloud Desktop App.
 2. Locate the xref:advanced_usage/configuration_file.adoc#location-of-the-configuration-file[configuration file]
 3. Open it with a text editor.
 4. Find your old server URL and adjust it.
-5. Save the file and start the ownCloud client again.
+5. Save the file and start the ownCloud Desktop App again.
 
 == Error Messages
 
@@ -88,23 +88,23 @@ For situations where arranging for a redirect is impossible, url changes can be 
 
 Keeping software up to date is crucial for file integrity and security – if software is outdated, there can be unfixed bugs. That’s why you should always upgrade your software when there is a new version.
 
-The ownCloud desktop client talks to a server, e.g. the ownCloud server, so you do not only have to upgrade your client when there is a new version for it, also the server has to be kept up-to-date by your sysadmin. Starting with version 2.5.0, the client will show a warning message if you connect to an outdated or unsupported server:
+The ownCloud Desktop App talks to a server, e.g. the ownCloud server, so you do not only have to upgrade your Desktop App when there is a new version for it, also the server has to be kept up-to-date by your sysadmin. Starting with version 2.5.0, the Desktop App will show a warning message if you connect to an outdated or unsupported server:
 
 image:faq/oc-unsupported-version-warning-message.png[image, width=80%,pdfwidth=60%]
 
 Only ownCloud 10.0.0 or Higher Is Supported::
-If you encounter such a message, you should ask your administrator to upgrade ownCloud to a secure version because earlier versions are not maintained anymore. An important feature of the ownCloud Client is checksumming – each time you download or upload a file, the client and the server both check if the file was corrupted during the sync. This way you can be sure that you don’t lose any files.
+If you encounter such a message, you should ask your administrator to upgrade ownCloud to a secure version because earlier versions are not maintained anymore. An important feature of the ownCloud Desktop App is checksumming – each time you download or upload a file, the Desktop App and the server both check if the file was corrupted during the sync. This way you can be sure that you don’t lose any files.
 +
-There are servers out there which don’t have checksumming implemented on their side, or which are not tested by ownCloud’s QA team. They can’t ensure file integrity, they have potential security issues, and we can’t guarantee that they are compatible with the ownCloud desktop client.
+There are servers out there which don’t have checksumming implemented on their side, or which are not tested by ownCloud’s QA team. They can’t ensure file integrity, they have potential security issues, and we can’t guarantee that they are compatible with the ownCloud Desktop App.
 
 We Care About Your Data and Want It to Be Safe::
-That’s why you see this warning message, so you can evaluate your data security. Don’t worry – you can still use the client with an unsupported server, but do so at your own risk.
+That’s why you see this warning message, so you can evaluate your data security. Don’t worry – you can still use the Desktop App with an unsupported server, but do so at your own risk.
 
 === Multiple Accounts Sharing the Folder
 
 image:faq/01_multiple-accounts-sharing-folder.png[image, width=80%,pdfwidth=60%]
 
-Desktop sync client discovered multiple sync journals (SQLite database files) in the folder. That indicates that multiple clients are using the same folder as a sync root. Under certain conditions it could also mean that there is an old `._sync_#HASH.db` or `.sync_#HASH.db` in the folder.
+Desktop App discovered multiple sync journals (SQLite database files) in the folder. That indicates that multiple Desktop Apps are using the same folder as a sync root. Under certain conditions it could also mean that there is an old `._sync_#HASH.db` or `.sync_#HASH.db` in the folder.
 
 *Resolve:*
 
@@ -115,17 +115,17 @@ Such a file will have an old change date and usually can be removed.
 image:faq/02_folder-used-in-sync-connection1.png[image, width=80%,pdfwidth=60%]
 image:faq/03_folder-used-in-sync-connection2.png[image, width=80%,pdfwidth=60%]
 
-Similar to the above case, the desktop sync client discovered one or more `.sync_journal.db` files in the directory. That means the folder is either already used by a different client for syncing or we again have an old SQLite database file in that folder. This can also happen if a user tries to import an old folder.
+Similar to the above case, the Desktop App discovered one or more `.sync_journal.db` files in the directory. That means the folder is either already used by a different Desktop App for syncing or we again have an old SQLite database file in that folder. This can also happen if a user tries to import an old folder.
 
 *Resolve:*
 
 Such a file will have an old change date and usually can be removed.
 
-=== Parent Folder Managed by Another Sync Client
+=== Parent Folder Managed by Another Desktop App
 
 image:faq/04_folder-used-by-different-client.png[image, width=80%,pdfwidth=60%]
 
-This error can only happen with native Windows VFS. Desktop sync client discovered that the folder is part of a subtree that is managed by another client, for example testpilotcloud. The difference to the next error is that we can't be sure it's a different client or an orphaned sync root.
+This error can only happen with native Windows VFS. The Desktop App discovered that the folder is part of a subtree that is managed by another Desktop App, for example testpilotcloud. The difference to the next error is that we can't be sure it's a different Desktop App or an orphaned sync root.
 
 Both errors are windows only. In the future we will try to prevent the situation leading to this.
 
@@ -133,11 +133,11 @@ Both errors are windows only. In the future we will try to prevent the situation
 
 Pick another sync folder.
 
-=== Folder Used by Different Client
+=== Folder Used by Different Desktop App
 
 image:faq/05_folder-managed-by-another-sync-client.png[image, width=80%,pdfwidth=60%]
 
-This error can only happen with native Windows VFS. Desktop sync client discovered that the folder is part of a subtree that is managed by another client, for example OneDrive.
+This error can only happen with native Windows VFS. Desktop App discovered that the folder is part of a subtree that is managed by another Desktop App, for example OneDrive.
 
 *Resolve:*
 
@@ -147,7 +147,7 @@ Pick another sync folder.
 
 On Linux, when the synchronized folder contains a high number of subfolders, the operating system may not allow for enough `inotify` watches to monitor the changes in all of them.
 
-In this case the client will not be able to immediately start the synchronization process when a file in one of the unmonitored folders changes. Instead, the client will show the warning and manually scan folders for changes at a regular interval (two hours by default).
+In this case the Desktop App will not be able to immediately start the synchronization process when a file in one of the unmonitored folders changes. Instead, the Desktop App will show the warning and manually scan folders for changes at a regular interval (two hours by default).
 
 This problem can be solved by setting the `fs.inotify.max_user_watches sysctl` to a higher value like `524288` permanently in the config file `/etc/sysctl.conf` or temporarily with the following command:
 
