--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -1,21 +1,21 @@
 * xref:index.adoc[Introduction]
-* xref:installing.adoc[Installing the Desktop Synchronization Client]
-* xref:navigating.adoc[Using the Synchronization Client]
+* xref:installing.adoc[Installing the Desktop App]
+* xref:navigating.adoc[Using the Desktop App]
 * xref:vfs.adoc[Using the Virtual Filesystem]
 * xref:filenames.adoc[Filename Considerations]
 * xref:conflicts.adoc[Manage Synchronisation Conflicts]
-* xref:automatic_updater.adoc[Automatic Updating the Client]
-* xref:removing.adoc[Removing the Client]
+* xref:automatic_updater.adoc[Automatic Updating]
+* xref:removing.adoc[Removing the Desktop App]
 * xref:faq.adoc[FAQ]
 * xref:advanced_usage/index.adoc[Advanced Usage]
 ** xref:advanced_usage/command_line_options.adoc[Options]
 ** xref:advanced_usage/configuration_file.adoc[Configuration File]
 ** xref:advanced_usage/environment_variables.adoc[Environment Variables]
-** xref:advanced_usage/command_line_client.adoc[Command-Line Client]
+** xref:advanced_usage/command_line_client.adoc[Command-Line Options]
 ** xref:advanced_usage/low_disk_space.adoc[Low Disk Space]
 * xref:appendices/index.adoc[Appendices]
-** xref:appendices/building.adoc[Building the Client]
+** xref:appendices/building.adoc[Building the Desktop App]
 ** xref:appendices/architecture.adoc[History and Architecture]
 ** xref:appendices/troubleshooting.adoc[Troubleshooting]
-** xref:appendices/guitest.adoc[GUI Testing the Desktop Client]
+** xref:appendices/guitest.adoc[GUI Testing the Desktop App]
 ** xref:appendices/release_notes.adoc[Release Notes]
